Foundament for Passport-branch

--- a/Client_App/Views/MainWindow.axaml
+++ b/Client_App/Views/MainWindow.axaml
@@ -305,7 +305,15 @@
                           CommandParameter="changelog"
                           Header="Список изменений"/>
                     
-            </MenuItem> 
+            </MenuItem>
+
+			<MenuItem Name="Passports"
+                      Header="Паспорта">
+				<MenuItem Command="{Binding AddPackagePassport}"
+						  Header="Добавить паспорт">
+					
+				</MenuItem>
+		    </MenuItem>
 
         </Menu>
         
