--- a/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
@@ -10,11 +10,14 @@
 			 xmlns:behaviors="using:Avalonia.Xaml.Interactions.Core"
 			 xmlns:local="using:Client_App.Behaviors"
 			 xmlns:vm="using:Client_App.ViewModels.MainWindowTabs"
+			 xmlns:customConverters="clr-namespace:Client_App.Resources.CustomConverters"
+			 xmlns:viewModels="clr-namespace:Client_App.ViewModels"
 			 x:DataType="vm:Forms1TabControlVM"
              x:Class="Client_App.Views.MainWindowTabs.Forms1TabControl">
 
 	<UserControl.Resources>
-		<converter:IfNullShowAnotherValue x:Key="IfNullShowAnotherValue"/>
+        <customConverters:BoolInverterConverter x:Key="BoolInverterConverter"/>
+        <converter:IfNullShowAnotherValue x:Key="IfNullShowAnotherValue"/>
 	</UserControl.Resources>
 
     <Design.DataContext>
@@ -42,10 +45,25 @@
 
 					<DataGrid.ContextMenu>
 						<ContextMenu>
+							<ContextMenu.Styles>
+								<Style Selector="MenuItem">
+									<Setter Property="Background" Value="WhiteSmoke"/>
+									<Setter Property="BorderThickness" Value="0"/>
+									<Setter Property="FontSize" Value="14"/>
+								</Style>
+							</ContextMenu.Styles>
 							<MenuItem Header="Добавить форму"
 									  Command="{Binding MainWindowVM.AddReports}"/>
 							<MenuItem Header="Редактировать форму"
 									  Command="{Binding MainWindowVM.NewChangeReports}"/>
+
+                            <MenuItem Header="Импортировать отчёт в организацию">
+                                <MenuItem Header="Из RAODB"
+                                          Click="ImportRaodb_Click"/>
+                                <MenuItem Header="Из Excel"
+                                          Click="ImportExcel_Click"/>
+                            </MenuItem>
+
 							<MenuItem Header="Удалить форму"
 									  Command="{Binding MainWindowVM.DeleteReports}"
 									  CommandParameter="{Binding SelectedReports}"/>
@@ -179,39 +197,39 @@
 					<Button Margin="0,0,0,5" 
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.1"
-							Content="Форма 1.1: Сведения о ЗРИ"></Button>
+							Content="Форма 1.1: Сведения о ЗРИ"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.2"
-							Content="Форма 1.2: Сведения об изделиях из обедненного урана"></Button>
+							Content="Форма 1.2: Сведения об изделиях из обедненного урана"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.3"
-							Content="Форма 1.3: Сведения об ОРИ в виде отдельных изделий"></Button>
+							Content="Форма 1.3: Сведения об ОРИ в виде отдельных изделий"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.4"
-							Content="Форма 1.4: Сведения об ОРИ кроме отдельных изделий"></Button>
+							Content="Форма 1.4: Сведения об ОРИ кроме отдельных изделий"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.5"
-							Content="Форма 1.5: Сведения о РАО в виде отработавших ЗРИ"></Button>
+							Content="Форма 1.5: Сведения о РАО в виде отработавших ЗРИ"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.6"
-							Content="Форма 1.6: Сведения о некондиционированных РАО"></Button>
+							Content="Форма 1.6: Сведения о некондиционированных РАО"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.7"
-							Content="Форма 1.7: Сведения о твердых кондиционированных РАО"></Button>
+							Content="Форма 1.7: Сведения о твердых кондиционированных РАО"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.8"
-							Content="Форма 1.8: Сведения о жидких кондиционированных РАО"></Button>
+							Content="Форма 1.8: Сведения о жидких кондиционированных РАО"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.NewAddForm}"
 							CommandParameter="1.9"
-							Content="Форма 1.9: Сведения о результатах инвентаризации РВ не в составе ЗРИ"></Button>
+							Content="Форма 1.9: Сведения о результатах инвентаризации РВ не в составе ЗРИ"/>
 				</StackPanel>
 			</ScrollViewer>
 			<Grid Grid.Row ="1" Grid.Column="0" Grid.ColumnSpan="2" RowDefinitions="*,Auto" >
