--- a/Client_App/Views/Messages/AskViacMessage.axaml
+++ b/Client_App/Views/Messages/AskViacMessage.axaml
@@ -35,9 +35,9 @@
 				</DataGridTextColumn>
 			</DataGrid.Columns>
 		</DataGrid>
-		<WrapPanel Grid.Row="2" HorizontalAlignment="Right" Margin="0,15,0,15">
+		<StackPanel Grid.Row="2" HorizontalAlignment="Right" Margin="0,15,0,15">
 			<Button IsDefault="True" Click="Accept_Click" MinWidth="60" Margin="0,0,5,0">Подтвердить</Button>
 			<Button Margin="0,0,10,0" Content="Отмена" Click="Cancel_Click"/>
-		</WrapPanel>
+		</StackPanel>
 	</Grid>
 </Window>
