--- a/Client_App/Views/MainWindowTabs/Forms2TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms2TabControl.axaml
@@ -50,22 +50,17 @@
 
 					<DataGrid.ContextMenu>
 						<ContextMenu>
-							<MenuItem Header="Добавить форму"
+							<MenuItem Header="Добавить организацию"
 									  Command="{Binding MainWindowVM.AddReports}"/>
-							<MenuItem Header="Редактировать форму"
+							<MenuItem Header="Редактировать отчёт по форме 2.0 организации"
 									  Command="{Binding MainWindowVM.NewChangeReports}"/>
-                            <MenuItem Header="Импортировать отчёт в организацию"
-                                      Name="ImportMenu">
+                            <MenuItem Header="Импортировать отчёт в организацию">
                                 <MenuItem Header="Из RAODB"
-                                          Command="{Binding MainWindowVM.ImportRaodb}"
-                                          CommandParameter="Selected"
-                                          IsVisible="{Binding MainWindowVM.AppLaunchedAtNorao, Converter={StaticResource BoolInverterConverter}}"/>
+                                          Click="ImportRaodb_Click"/>
                                 <MenuItem Header="Из Excel"
-                                          Command="{Binding MainWindowVM.ImportExcel}"
-                                          CommandParameter="Selected"
-                                          IsVisible="{Binding MainWindowVM.AppLaunchedAtNorao, Converter={StaticResource BoolInverterConverter}}"/>
+                                          Click="ImportExcel_Click"/>
                             </MenuItem>
-							<MenuItem Header="Удалить форму"
+							<MenuItem Header="Удалить организацию"
 									  Command="{Binding MainWindowVM.DeleteReports}"
 									  CommandParameter="{Binding SelectedReports}"/>
 							<MenuItem Header="Выгрузить организацию"
@@ -220,7 +215,7 @@
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.AddForm}"
 							CommandParameter="2.3"
-							Content="Форма 2.3: Разрешение на размещенеие РАО в пунктах хранения, местах сбора и/или временного хранения"/>
+							Content="Форма 2.3: Разрешение на размещение РАО в пунктах хранения, местах сбора и/или временного хранения"/>
 					<Button Margin="0,0,0,5"
 							Command="{Binding MainWindowVM.AddForm}"
 							CommandParameter="2.4"
@@ -279,19 +274,22 @@
 					
 					<DataGrid.ContextMenu>
 						<ContextMenu>
-							<MenuItem Header="Редактировать форму"
+							<MenuItem Header="Редактировать отчёт"
 									  Command="{Binding MainWindowVM.ChangeForm}"
 									  CommandParameter="{Binding SelectedReport}"/>
-							<MenuItem Header="Удалить форму"
+							<MenuItem Header="Удалить отчёт"
 									  Command="{Binding MainWindowVM.NewDeleteForm}"
 									  CommandParameter="{Binding SelectedReport}"/>
-							<MenuItem Header="Выгрузить форму в Excel"
-									  Command="{Binding MainWindowVM.ExcelExportFormPrint}"
-									  CommandParameter="{Binding SelectedReport}"/>
-							<MenuItem Header="Выгрузить"
+                            <MenuItem Header="Выгрузить отчёт в Excel">
+                                <MenuItem Header="для печати"
+                                          Click="ExportExcelPrint_Click"/>
+                                <MenuItem Header="для анализа"
+                                          Click="ExportExcelAnalysis_Click"/>
+                            </MenuItem>
+							<MenuItem Header="Выгрузить отчёт в RAODB"
 									  Command="{Binding MainWindowVM.ExportForm}"
 									  CommandParameter="{Binding SelectedReport}"/>
-							<MenuItem Header="Проверить форму"
+							<MenuItem Header="Проверить отчёт"
 									  Command="{Binding MainWindowVM.CheckFormFromMain}"
 									  CommandParameter="{Binding SelectedReport}"/>
 							<MenuItem Header="Сохранить комментарий"
