--- a/Client_App/Views/Passports/PackagePassportWindow.axaml
+++ b/Client_App/Views/Passports/PackagePassportWindow.axaml
@@ -61,8 +61,9 @@
 			<TextBox Grid.Row="0" Grid.Column="1" Margin="5" 
 					 Watermark="(номер технических условий)"/>
 			<TextBox Grid.Row="0" Grid.Column="2" Margin="5"
-					 Grid.ColumnSpan="2"
-					 Watermark="(название и класс РАО)"/>
+					 Watermark="(название РАО)"/>
+			<TextBox Grid.Row="0" Grid.Column="3" Margin="5"
+					 Watermark="(класс РАО)"/>
 			
 			<TextBlock Grid.Row="1" Grid.Column="0" Margin="5" 
 					   HorizontalAlignment="Right"
@@ -75,20 +76,27 @@
 			<TextBox Grid.Row="2" Grid.Column="1" Margin="5"
 					   Watermark="(Идентификационный код)"/>
 			<TextBox Grid.Row="2" Grid.Column="2" Margin="5"
-					 Grid.ColumnSpan="2"
-					 Watermark="(тип и идентификатор(ы) ПУОД)"/>
+					 Watermark="(тип ПУОД)"/>
+			<TextBox Grid.Row="2" Grid.Column="3" Margin="5"
+					 Watermark="(идентификатор(ы) ПУОД)"/>
 			
 			<TextBlock Grid.Row="3" Grid.Column="0" Margin="5"
 					   HorizontalAlignment="Right"
 					   Text="Организация-собственник упаковки РАО"/>
 			<TextBox Grid.Row="3" Grid.Column="1" Margin="5"
-					 Grid.ColumnSpan="3"/>
+					 Grid.ColumnSpan="2"
+					 Watermark="Название организации"/>
+			<TextBox Grid.Row="3" Grid.Column="3" Margin="5"
+					 Watermark="ОКПО"/>
 			
 			<TextBlock Grid.Row="4" Grid.Column="0" Margin="5"
 					   HorizontalAlignment="Right"
 					   Text="Организация-изготовитель упаковки РАО"/>
 			<TextBox Grid.Row="4" Grid.Column="1" Margin="5"
-					 Grid.ColumnSpan="3"/>
+					 Grid.ColumnSpan="2"
+					 Watermark="Название организации"/>
+			<TextBox Grid.Row="4" Grid.Column="3" Margin="5"
+					 Watermark="ОКПО"/>
 			
 			<TextBlock Grid.Row="5" Grid.Column="0" Margin="5"
 					   HorizontalAlignment="Right"
@@ -159,34 +167,41 @@
 
 					<Border Grid.Row="0"
                             Grid.Column="0"
-							Grid.ColumnSpan="7"
+							Grid.ColumnSpan="8"
                             BorderThickness="1,1,1,0">
 						<TextBlock>Состав упаковки РАО</TextBlock>
 					</Border>
 					<Border Grid.Row="0"
-                            Grid.Column="7"
+                            Grid.Column="8"
                             Grid.ColumnSpan="4">
 						<TextBlock>Габариты упаковки РАО, мм</TextBlock>
 					</Border>
 					<Border Grid.Row="0"
-                            Grid.Column="11"
+                            Grid.Column="12"
                             Grid.ColumnSpan="2">
 						<TextBlock Text="Масса, кг (объем, куб. м)"/>
 					</Border>
-					<Border Grid.Row="0"
-                            Grid.RowSpan="2"
-                            Grid.Column="13"
-                            Grid.ColumnSpan="2">
-						<TextBlock Text="Мощность дозы излучения,мк3в/ч на расстоянии от поверхности, м"/>
+					<Border Grid.Row="0" Grid.Column="14"
+							Grid.ColumnSpan="5">
+						<TextBlock Text="Параметры рад.контроля"/>
 					</Border>
 
 					<!--Второй уровень заголовков-->
 
 					<Border Grid.Row="1"
                             Grid.Column="1"
-							Grid.ColumnSpan="4"
+							Grid.ColumnSpan="5"
                             BorderThickness="1,1,1,0">
 						<TextBlock>Количество и характеристики первичных упаковок</TextBlock>
+					</Border>
+					<Border Grid.Row="1"
+                            Grid.Column="14"
+                            Grid.ColumnSpan="2">
+						<TextBlock Text="Мощность дозы излучения,мк3в/ч на расстоянии от поверхности, м"/>
+					</Border>
+					<Border Grid.Row="1" Grid.Column="16"
+							Grid.ColumnSpan="2">
+						<TextBlock Text="Уровень нефиксированного загрязнения, частиц/(мин*см²)"/>
 					</Border>
 					<!--Третий уровень заголовков-->
 
@@ -195,60 +210,69 @@
 						<TextBlock Text="Способ размещения отходов" />
 					</Border>
 					<Border Grid.Row="2" Grid.Column="1">
-						<TextBlock Text="Тип и номер"/>
+						<TextBlock Text="Тип"/>
 					</Border>
 					<Border Grid.Row="2" Grid.Column="2">
-						<TextBlock Text="Количество, шт."/>
+						<TextBlock Text="номер"/>
 					</Border>
 					<Border Grid.Row="2" Grid.Column="3">
-						<TextBlock Text="Объем, м³"/>
+						<TextBlock Text="Количество, шт."/>
 					</Border>
 					<Border Grid.Row="2" Grid.Column="4">
-						<TextBlock Text="Масса с отходами, кг"/>
+						<TextBlock Text="Объем, м³"/>
 					</Border>
-					<Border Grid.Row="1" Grid.Column="5"
-							Grid.RowSpan="2">
-						<TextBlock Text="Наличие и вид матричного материала"/>
+					<Border Grid.Row="2" Grid.Column="5">
+						<TextBlock Text="Масса с отходами, кг"/>
 					</Border>
 					<Border Grid.Row="1" Grid.Column="6"
 							Grid.RowSpan="2">
-						<TextBlock Text="Дата заполнения отходами"/>
+						<TextBlock Text="Наличие и вид матричного материала"/>
 					</Border>
 					<Border Grid.Row="1" Grid.Column="7"
 							Grid.RowSpan="2">
-						<TextBlock Text="Диаметр"/>
+						<TextBlock Text="Дата заполнения отходами"/>
 					</Border>
 					<Border Grid.Row="1" Grid.Column="8"
 							Grid.RowSpan="2">
-						<TextBlock Text="Высота"/>
+						<TextBlock Text="Диаметр"/>
 					</Border>
 					<Border Grid.Row="1" Grid.Column="9"
 							Grid.RowSpan="2">
-						<TextBlock Text="Длина"/>
+						<TextBlock Text="Высота"/>
 					</Border>
 					<Border Grid.Row="1" Grid.Column="10"
 							Grid.RowSpan="2">
-						<TextBlock Text="Ширина"/>
+						<TextBlock Text="Длина"/>
 					</Border>
 					<Border Grid.Row="1" Grid.Column="11"
 							Grid.RowSpan="2">
-						<TextBlock Text="Упаковки РАО"/>
+						<TextBlock Text="Ширина"/>
 					</Border>
 					<Border Grid.Row="1" Grid.Column="12"
 							Grid.RowSpan="2">
+						<TextBlock Text="Упаковки РАО"/>
+					</Border>
+					<Border Grid.Row="1" Grid.Column="13"
+							Grid.RowSpan="2">
 						<TextBlock Text="РАО в упаковке"/>
 					</Border>
-					<Border Grid.Row="2" Grid.Column="13">
+					<Border Grid.Row="2" Grid.Column="14">
 						<TextBlock Text="0,1"/>
 					</Border>
-					<Border Grid.Row="2" Grid.Column="14">
+					<Border Grid.Row="2" Grid.Column="15">
 						<TextBlock Text="1"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="15"
-							Grid.RowSpan="3">
-						<TextBlock Text="Уровень нефиксированного загрязнения, частиц/(мин*см²)"/>
+					<Border Grid.Row="2" Grid.Column="16">
+						<TextBlock Text="альфа"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="16"
+					<Border Grid.Row="2" Grid.Column="17">
+						<TextBlock Text="бета/гамма"/>
+					</Border>
+					<Border Grid.Row="1" Grid.Column="18"
+							Grid.RowSpan="2">
+						<TextBlock Text="дата приведения данных"/>
+					</Border>
+					<Border Grid.Row="0" Grid.Column="19"
 							Grid.RowSpan="3">
 						<TextBlock Text="Тепловыделение, Вт/м³, Вт/упаковку"/>
 					</Border>
@@ -558,6 +582,57 @@
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
 
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="18" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="19" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="20" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
 					</DataGrid.Columns>
 				</DataGrid>
 
@@ -591,48 +666,83 @@
                       Width="{Binding ElementName=dataGrid.Width}"
                       Classes="tableHeader"
                       ColumnDefinitions="*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*,*"
-                      RowDefinitions="Auto">
+                      RowDefinitions="Auto,Auto,Auto">
 
 					<interactivity:Interaction.Behaviors>
 						<local:ColumnWidthSyncBehavior SourceDataGrid="{Binding ElementName=dataGrid2}" />
 					</interactivity:Interaction.Behaviors>
 
-					
 					<!--Первый уровень заголовков-->
+					<Border Grid.Row="0" Grid.Column="6"
+							Grid.ColumnSpan="8">
+						<TextBlock Text="Активность"/>
+					</Border>
+					<!--Второй уровень заголовков-->
+					
+					<Border Grid.Row="1" Grid.Column="8"
+							Grid.ColumnSpan="5">
+						<TextBlock Text="Суммарные удельные активности, кБк/кг"/>
+					</Border>
+					
+					<!--Третий уровень заголовков-->
 
-					<Border Grid.Row="0" Grid.Column="0">
+					<Border Grid.Row="0" Grid.Column="0"
+							Grid.RowSpan="3">
 						<TextBlock Text="Индивидуальный номер упаковки" />
 					</Border>
-					<Border Grid.Row="0" Grid.Column="1">
-						<TextBlock Text="Класс и код РАО"/>
+					<Border Grid.Row="0" Grid.Column="1"
+							Grid.RowSpan="3">
+						<TextBlock Text="Класс РАО"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="2">
+					<Border Grid.Row="0" Grid.Column="2"
+							Grid.RowSpan="3">
+						<TextBlock Text="Код РАО"/>
+					</Border>
+					<Border Grid.Row="0" Grid.Column="3"
+							Grid.RowSpan="3">
 						<TextBlock Text="Физико-химическая форма РАО, тип матричного материала"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="3">
+					<Border Grid.Row="0" Grid.Column="4"
+							Grid.RowSpan="3">
 						<TextBlock Text="Морфологический (химический) состав отходов"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="4">
+					<Border Grid.Row="0" Grid.Column="5"
+							Grid.RowSpan="3">
 						<TextBlock Text="Горючесть"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="5"
+					<Border Grid.Row="1" Grid.Column="6"
 							Grid.RowSpan="2">
 						<TextBlock Text="Радионуклидный состав"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="6"
+					<Border Grid.Row="1" Grid.Column="7"
 							Grid.RowSpan="2">
 						<TextBlock Text="Удельная активность, кБк/кг"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="7"
-							Grid.RowSpan="2">
-						<TextBlock Text="Суммарные удельные активности, кБк/кг"/>
+					<Border Grid.Row="2" Grid.Column="8">
+						<TextBlock Text="долгоживущие"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="8"
+					<Border Grid.Row="2" Grid.Column="9">
+						<TextBlock Text="трансурановые"/>
+					</Border>
+					<Border Grid.Row="2" Grid.Column="10">
+						<TextBlock Text="альфа-изл. (за искл. т/уран.)"/>
+					</Border>
+					<Border Grid.Row="2" Grid.Column="11">
+						<TextBlock Text="бета/гамма-изл."/>
+					</Border>
+					<Border Grid.Row="2" Grid.Column="12">
+						<TextBlock Text="тритий"/>
+					</Border>
+					<Border Grid.Row="1" Grid.Column="13"
 							Grid.RowSpan="2">
 						<TextBlock Text="Общая активность, БК"/>
 					</Border>
-					<Border Grid.Row="0" Grid.Column="9"
-							Grid.RowSpan="2">
+					<Border Grid.Row="0" Grid.Column="14"
+							Grid.RowSpan="3">
+						<TextBlock Text="Дата приведения активности"/>
+					</Border>
+					<Border Grid.Row="0" Grid.Column="15"
+							Grid.RowSpan="3">
 						<TextBlock Text="Содержание ядерно-опасных делящихся нуклидов, кБк/кг, мг/кг"/>
 					</Border>
 
@@ -821,6 +931,108 @@
 								</DataTemplate>
 							</DataGridTemplateColumn.CellTemplate>
 						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="11" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="12" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="13" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="14" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="15" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
+
+						<DataGridTemplateColumn>
+							<DataGridTemplateColumn.HeaderTemplate>
+								<DataTemplate>
+									<Border Classes="headerTemplate">
+										<Grid ColumnDefinitions="*,Auto">
+											<TextBlock Grid.Column="0" Text="16" />
+										</Grid>
+									</Border>
+								</DataTemplate>
+							</DataGridTemplateColumn.HeaderTemplate>
+							<DataGridTemplateColumn.CellTemplate>
+								<DataTemplate>
+									<TextBox/>
+								</DataTemplate>
+							</DataGridTemplateColumn.CellTemplate>
+						</DataGridTemplateColumn>
 					</DataGrid.Columns>
 				</DataGrid>
 
@@ -830,15 +1042,17 @@
 		<!--Footer-->
 
 		<Grid RowDefinitions="Auto, Auto"
-			  ColumnDefinitions="Auto, *, 2*, *">
+			  ColumnDefinitions="Auto, *, *, *, *">
 			<TextBlock Grid.Row="0" Grid.Column="0" Margin="5"
 					   HorizontalAlignment="Right"
 					   Text="Ответственный за сдачу РАО"/>
 			<TextBox Grid.Row="0" Grid.Column="1" Margin="5"
 					 Watermark="(наименование организации)"/>
 			<TextBox Grid.Row="0" Grid.Column="2" Margin="5"
-					 Watermark="(Должность, Фамирия И.О. уполномоченного лица)"/>
+					 Watermark="(Должность уполномоченного лица)"/>
 			<TextBox Grid.Row="0" Grid.Column="3" Margin="5"
+					 Watermark="(Фамилия И.О. уполномоченного лица)"/>
+			<TextBox Grid.Row="0" Grid.Column="4" Margin="5"
 					 Watermark="(подпись уполномоченного лица)"/>
 
 			<TextBlock Grid.Row="1" Grid.Column="0" Margin="5"
@@ -847,8 +1061,10 @@
 			<TextBox Grid.Row="1" Grid.Column="1" Margin="5"
 					 Watermark="(наименование организации)"/>
 			<TextBox Grid.Row="1" Grid.Column="2" Margin="5"
-					 Watermark="(Должность, Фамирия И.О. уполномоченного лица)"/>
+					 Watermark="(Должность уполномоченного лица)"/>
 			<TextBox Grid.Row="1" Grid.Column="3" Margin="5"
+					 Watermark="(Фамилия И.О. уполномоченного лица)"/>
+			<TextBox Grid.Row="1" Grid.Column="4" Margin="5"
 					 Watermark="(подпись уполномоченного лица)"/>
 		</Grid>
 	</StackPanel>
