--- a/Client_App/Views/MainWindowTabs/Forms5TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms5TabControl.axaml
@@ -265,24 +265,26 @@
 				<Border Grid.Row="1" Classes="pageControlContainer">
 					<Grid
 						  RowDefinitions="Auto,Auto"
-						  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto">
+						  ColumnDefinitions="Auto,Auto,Auto,Auto,Auto,Auto,Auto">
 						<TextBlock Text="Текущая страница"
 							Grid.Row="0" Grid.Column="0" Margin="5"/>
-
 						<controls:NumericLeftRight
 							Value="{Binding CurrentPageForms}"
 							Grid.Row="0" Grid.Column="1" Margin="5"
 							Minimum="1"/>
+						
 						<TextBlock Text ="Кол-во страниц:"
 							Grid.Row="0" Grid.Column="2" Margin="5"/>
 						<TextBlock Text="{Binding TotalPagesForms}"
 							Grid.Row="0" Grid.Column="3" Margin="5"/>
+						
 						<TextBlock Text="Кол-во строчек на странице"
 							Grid.Row="1" Grid.Column="0" Margin="5"/>
 						<controls:NumericLeftRight
 							Value="{Binding RowsCountForms}"
 							Grid.Row="1" Grid.Column="1" Margin="5"
 							Minimum="1"/>
+						
 						<TextBlock Text="Кол-во отчетов:"
 							Grid.Row="1" Grid.Column="2" Margin="5"/>
 						<TextBlock Text="{Binding TotalRowsForms}"
