sorting form 57 bug fixed

--- a/Client_App/Views/Forms/Forms5/Form_57.axaml
+++ b/Client_App/Views/Forms/Forms5/Form_57.axaml
@@ -265,7 +265,7 @@
                     </interactivity:Interaction.Behaviors>
 
 					<DataGrid.Columns>
-                        <DataGridTextColumn Binding="{Binding NumberInOrder.Value}"
+                        <DataGridTextColumn Binding="{Binding NumberInOrder_DB}"
 											Width="40"
 											IsReadOnly="True"
 											x:DataType="forms5:Form57">
