--- a/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
+++ b/Client_App/Views/MainWindowTabs/Forms1TabControl.axaml
@@ -62,8 +62,7 @@
 									  Command="{Binding MainWindowVM.ExportAllReports}"
 									  CommandParameter="{Binding SelectedReports}"/>
 							<MenuItem Header="Выгрузить все отчеты в отдельные файлы"
-									  Command="{Binding MainWindowVM.ExportAllReport}"
-									  CommandParameter="{Binding SelectedReports}"/>
+									  Command="{Binding MainWindowVM.ExportAllReport}"/>
 							<MenuItem Header="Проверить все формы организации"
 									  Command="{Binding MainWindowVM.ExcelExportCheckAllForms}"
 									  CommandParameter="{Binding SelectedReports}"/>
